# scale-info

./: Cargo.toml
test_suite/: Cargo.toml
test_suite/derive_tests_no_std/: Cargo.toml
